more layout done on the user-index page, fixed the overflow on containers

--- a/design/sass/layouts/_modules.sass
+++ b/design/sass/layouts/_modules.sass
@@ -153,17 +153,21 @@ main
 
 // layout for user-home.html=====================================
 
-.user_home
-  display: flex
-  height: auto
-  margin: 0 auto
-  width: 80%
+// .user_home
+//   display: flex
 
-.user_side_menu
-  display: flex
-  flex-direction: column
-  background-color: transparentize(#003035, .2)
-  font-size: 1.618em
+// .user_side_menu
+//   display: flex
+//   flex-direction: column
+//   background-color: transparentize(#003035, .2)
+//   font-size: 1.618em
+
+// .activity_location
+//   display: flex
+//   flex-flow: column nowrap
+//   width: 10em
+
+
 
 .user_photo
   margin: 1.618em 0
@@ -189,10 +193,7 @@ main
     color: #69ad57
 
 
-.activity_location
-  display: flex
-  flex-flow: column nowrap
-  flex: 3
+
 
 .activity_map
   height: 20em
