--- a/design/sass/modules/_modules.sass
+++ b/design/sass/modules/_modules.sass
@@ -16,7 +16,31 @@
 
 // Media bigger than Ipad and tablets id desktop
 
-@media all and (min-width: 501px)
-  body
-    font-size: 1em
+@media all and (min-width: 901px)
+  .menu-link
+    display: none
+  .user_side_menu
+    -webkit-transform: translate(17.755em, 0px)
+    -moz-transform: translate(17.755em, 0px)
+    -o-transform: translate(17.755em, 0px)
+    -ms-transform: translate(17.755em, 0px)
+    transform: translate(17.755em, 0px)
+  .activity_location
+    -webkit-transform: translate(17.725em, 0px)
+    -moz-transform: translate(17.725em, 0px)
+    -o-transform: translate(17.725em, 0px)
+    -ms-transform: translate(17.725em, 0px)
+    transform: translate(17.725em, 0px)
+    width: 80%
+//   body
+//     font-size: 1em
+//   .user_side_menu
+//     left: 0
+//   .menu-link
+//     display: none
+
+//   .user_home
+//     display: flex
+//     margin: 0 auto
+
 
